[package]
name = "axum-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
futures = "0.3.30"
http = "1.1.0"
jsonwebtoken = "9.3.0"
reqwest = "0.12.7"
serde = "1.0.209"
serde_derive = "1.0.209"
serde_json = "1.0.127"
thiserror = "1.0.63"
tower = { version = "0.5.1", features = ["util"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.40"
uri = "0.4.0"
url = "2.5.2"

[dev-dependencies]
base64-url = "3.0.0"
openssl = "0.10.68"
tokio = { version = "1.40.0", features = ["full"] }
wiremock = "0.6.2"
