[package]
name = "axum-jose"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Lightweight authorization middleware for `axum` following JSON Object Signing and Encryption (JOSE) standards."
readme = "README.md"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
futures = "0.3.30"
governor = "0.10.1"
http = "1.1.0"
http-cache-reqwest = { version = "0.15.0", features = ["manager-moka"] }
jsonwebtoken = "9.3.0"
moka = { version = "0.12.10", features = ["future"] }
reqwest = { version = "0.12.7", features = ["json"] }
reqwest-middleware = "0.4.0"
serde = "1.0.209"
serde_derive = "1.0.209"
serde_json = "1.0.127"
thiserror = "1.0.63"
tower = { version = "0.5.1", features = ["buffer", "limit", "util"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.40"
uri = "0.4.0"
url = "2.5.2"

[dev-dependencies]
base64-url = "3.0.0"
openssl = "0.10.68"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.13"
wiremock = "0.6.2"
