[package]
name = "axum-jose"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "Lightweight authorization middleware for `axum` following JSON Object Signing and Encryption (JOSE) standards."
readme = "README.md"
keywords = ["authorization", "axum", "jose", "jwt"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
axum = "0.8.8"
axum-extra = { version = "0.12.3", features = ["typed-header"] }
futures = "0.3.30"
governor = "0.10.4"
http = "1.4.0"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
moka = { version = "0.12.12", features = ["future"] }
reqwest = { version = "0.12.27", features = ["json"] }
serde = "1.0.209"
serde_derive = "1.0.209"
serde_json = "1.0.146"
thiserror = "2.0.17"
tower = { version = "0.5.1", features = ["buffer", "limit", "util"] }
tower-layer = "0.3.3"
tower-service = "0.3.3"
tracing = "0.1.44"
uri = "0.4.0"
url = "2.5.8"

[dev-dependencies]
base64-url = "3.0.2"
openssl = "0.10.75"
reqwest = { version = "0.12.27", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
wiremock = "0.6.2"
